# aegisiso-prototype

./: .gitignore  Cargo.toml  archiso.toml  install-deps.sh
src/: cli.rs  config.rs  error.rs  fs.rs  image.rs  main.rs  pacman.rs  sign.rs  template.rs
