[package]
name = "aegisiso"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
askama = { version = "0.14.0", features = ["derive"] }
async-process = "2.3.0"
async-std = { version = "1.13.1", features = ["attributes"] }
clap = { version = "4.5.37", features = ["derive"] }
fs_extra = "1.3.0"
pgp = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.22"
walkdir = "2.5.0"

